# lapo

./: .gitignore  README.md  pyproject.toml
configs/: openarm_pick_place_green277_lapo_stage1.yaml  openarm_pick_place_green277_lapo_stage2.yaml  openarm_pick_place_green277_lapo_stage3.yaml  openarm_pick_place_green277_lapo_stage4.yaml  openarm_pick_place_green277_sb_final.yaml  openarm_xvla.yaml
lapo/: __init__.py  paths.py
lapo/train/: __init__.py  __main__.py  cli.py  compat.py  config.py  distributed.py  engine.py  env_check.py  registry.py  strategy.py
lapo/train/artifacts/: __init__.py  graph_extractor.py  writer.py
lapo/train/flows/: __init__.py  schrodinger_bridge.py
lapo/train/policies/: __init__.py  builtin.py  openarm_action_space.py  xvla_norm.py  xvla_tokenizer.py
lapo/train/policies/lapo/: __init__.py  config.py  model.py  policy.py
lapo/train/policies/sb/: __init__.py  bridge.py  components.py  config.py  model.py  (+2 more)
lapo/train/services/: __init__.py  registry_store.py  training.py
lapo/train/strategies/: __init__.py  lapo.py  sbvla.py  smolvla_sp.py  xvla_ee6d.py  xvla_sp.py
scripts/: analyze_latent_dist.py  lapo_48h_full.sh  lapo_48h_orchestrator.sh  lapo_eval.py  lapo_stage2_3_run.sh  lapo_stage3_to_4.sh  lapo_stage4_monitor.sh  lapo_vs_xvla_eval.py
tests/: conftest.py  test_builtin.py  test_cli.py  test_compat.py  test_config.py  test_delta_timestamps.py  test_distributed.py  test_engine.py  test_env_check.py  test_graph_extractor.py  test_registry.py  test_services_training.py  test_strategy.py  test_writer.py  test_xvla_sp.py
